# ghostty-agent-web-oneshot

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  plan.md
client/: Cargo.toml  Trunk.toml  crate.nix  index.html  package-lock.json  package.json  style.css  vite.config.js
client/js/: ghostty-bridge.js
client/src/: App.css  App.jsx  NewSessionDialog.jsx  TerminalView.jsx  main.rs  terminal.rs
common/: Cargo.toml  crate.nix
common/src/: lib.rs
server/: Cargo.toml  crate.nix  package-lock.json  package.json
server/src/: index.js  main.rs
