[package]
name = "ghostty-agent-web-client"
version = "0.1.0"
edition = "2024"
description = "Web terminal dashboard frontend"

[dependencies]
ghostty-agent-web-common = { path = "../common" }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement",
    "WebSocket", "MessageEvent", "BinaryType", "CloseEvent",
    "ResizeObserver", "ResizeObserverEntry", "DomRectReadOnly",
    "console",
    "Headers", "Request", "RequestInit", "RequestMode", "Response",
] }
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http", "json", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
