[package]
name = "ghostty-agent-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ghostty-agent-web-common = { path = "../common" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
bytes = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
